--- a/hospital/templates/hospitals/detail.html
+++ b/hospital/templates/hospitals/detail.html
@@ -1,2 +1,40 @@
-{{ hospital }}
-{{ blood }}
+<h1>{{ hospital }}</h1>
+<style>
+  table, td {
+    border:black 1px solid;
+  }
+</style>
+<table style="">
+  <thead>
+    <td>
+      Name
+    </td>
+    <td>
+      used
+    </td>
+    <td>
+      amount
+    </td>
+    <td>
+      Expire Date
+    </td>
+    <td>
+      Arrival Date
+    </td>
+  </thead>
+{% for b in blood_list %}
+  <tr style="border:black 1px solid">
+    <td>{{b.donorId.name}}</td>
+    <td>
+      {{b.used}}
+    </td>
+    <td>{{b.amount}}</td>
+    <td>
+      {{ b.used_by_date }}
+    </td>
+    <td>
+      {{ b.arrive_date}}
+    </td>
+  </tr>
+{% endfor %}
+</table>
