--- a/hospital/templates/hospitals/blood_detail.html
+++ b/hospital/templates/hospitals/blood_detail.html
@@ -4,7 +4,11 @@
 {% block blood %} active {% endblock %}
 {% block heading %}{{ hospital }} Hospital Blood detail{% endblock %}
 {% block content %}
-
+<style media="screen">
+  .expired {
+    color: red;
+  }
+</style>
 <table class="table table-striped">
   <thead>
     <th> Name </th>
@@ -14,7 +18,11 @@
     <th> Expire Date </th>
   </thead>
   {% for b in blood_list %}
-    <tr>
+    <tr class="
+    {% if b.used_by_date < today %}
+    expired
+    {% endif %}
+    ">
       <td>{{b.donorId.name}}</td>
       <td> {{b.used}} </td>
       <td>{{b.amount}}</td>
