--- a/bloods/templates/index.html
+++ b/bloods/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'hospital_base.html' %}
 
 {% block title %} Total Blood Stats {% endblock %}
 {% block home %} active {% endblock %}
