Fix template tag missing

--- a/hospital/templates/hospitals/blood_detail.html
+++ b/hospital/templates/hospitals/blood_detail.html
@@ -1,4 +1,5 @@
 {% extends 'hospital_base.html' %}
+{% load template_tags %}
 
 {% block title %} {{ hospital }} - Blood Detail {% endblock %}
 {% block blood %} active {% endblock %}
