Add blood record view

--- a/bloods/templates/blood_index.html
+++ b/bloods/templates/blood_index.html
@@ -1,7 +1,7 @@
-{% extends 'hospital_base.html' %}
+{% extends 'blood_base.html' %}
 
 {% block title %} Total Blood Stats {% endblock %}
-{% block home %} active {% endblock %}
+{% block index %} active {% endblock %}
 {% block heading %} Total Blood Stats {% endblock %}
 {% block content %}
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
@@ -32,7 +32,7 @@
     .each("start", function() { d3.select(this).style("width", "0px").style("background-color", "white"); })
     .text(function(d) { return d.name + ": "+ d.value; })
     .duration(1550)
-    .style("width", function(d) { return d.value * 0.01 + "%"; });
+    .style("width", function(d) { return d.value * 0.00005 + "%"; });
 
 
 </script>
